<resources>
    <string name="app_name">PMJewellers</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Facebook">Facebook</string>
    <string name="Google">  Google    </string>
    <string name="createAccount">Not created account , create account by clicking Register button</string>
    <string name="Register">Register</string>
    <string name="loginBy">------Login By-----</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="backToLogin">Click login button to go Login page.</string>
    <string name="BagFragment">BagFragment</string>
    <string name="CategoriesFragment">CategoriesFragment</string>
    <string name="DashboardFragment">DashboardFragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pmjewellers">Prashant Manurkar Jewellers</string>
    <string name="pmjGmail">prashantmanurkarjewellers@gmail.com</string>
    <string name="menu_bag">Bag</string>
    <string name="account">Account</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_feedback">Feedback</string>
    <string name="Bag" />
    <string name="Bag2">Bag</string>
    <string name="UserName">UserName</string>
    <string name="BagIsEmpty">Bag Empty</string>
    <string name="AdFragment">AdFragment</string>
    <string name="ProfileName">Surname MiddleName FirstName</string>
    <string name="ProfileAddress">Address</string>
    <string name="ProfileMobileNumber">+91 1234567890</string>
    <string name="ProfileEmailId">abc@gmail.com</string>
    <string name="Totalitems">Items : 0</string>
    <string name="TotalCost">Total Cost : 0</string>
</resources>