<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pmjewellers.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:menuCategory="secondary"

        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/fab"
        android:name="com.example.pmjewellers.ui.bag.BagFragment"
        android:menuCategory="secondary"

        tools:layout="@layout/fragment_bag" />
<fragment
        android:id="@+id/nav_bag"
        android:name="com.example.pmjewellers.ui.bag.BagFragment"
        android:label="@string/menu_bag"

    android:menuCategory="secondary"

    tools:layout="@layout/fragment_bag" />
<fragment
        android:id="@+id/nav_account"
        android:name="com.example.pmjewellers.ui.account.AccountFragment"
        android:label="@string/menu_account"
    android:menuCategory="secondary"

    tools:layout="@layout/fragment_account" />
<fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pmjewellers.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
    android:menuCategory="secondary"

    tools:layout="@layout/fragment_settings" />
<fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.pmjewellers.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
    android:menuCategory="secondary"

    tools:layout="@layout/fragment_feedback" />
<fragment
        android:id="@+id/nav_review"
        android:name="com.example.pmjewellers.ui.review.ReviewFragment"
        android:label="@string/menu_reviews"
    android:menuCategory="secondary"

    tools:layout="@layout/fragment_reviews" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.pmjewellers.ui.logout.LogoutFragment"
        android:label="@string/menu_home"
        android:menuCategory="secondary"

        tools:layout="@layout/fragment_logout"

        />

</navigation>