<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="33dp"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/ProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/pmlogo"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/ProfileName"
            android:hint="@string/ProfileName"
            android:inputType="text"
            android:gravity="center"
            android:layout_marginTop="33dp"


            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/ProfileAddress"
            android:hint="@string/ProfileAddress"
            android:inputType="textMultiLine"
            android:gravity="center"
            android:layout_marginTop="10dp"


            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/mobileNumber"
            android:hint="@string/ProfileMobileNumber"
            android:inputType="number"
            android:gravity="center"
            android:layout_marginTop="10dp"


            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/ProfileEmailId"
            android:hint="@string/ProfileEmailId"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_marginTop="10dp"


            />
        <Button

            android:text="Save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/save"
            />


    </LinearLayout>
</RelativeLayout>